Closed Bug 403455 Opened 17 years ago Closed 17 years ago

prewrap break opportunities are lost

Categories

(Core :: Layout: Text and Fonts, defect, P2)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

(Keywords: regression, testcase, Whiteboard: [needs review])

Attachments

(1 file)

The code in nsTextFrame::Reflow that records the last break opportunity found in the frame (in case subsequent text overflows the available width) is broken because it's inside "if (canTrimTrailingWhitespace)". But prewrap text can have break opportunities inside it, which need to be recorded. Even white-space:pre text can --- there can be a break opportunity at the start.
Flags: blocking1.9?
Attached patch fixSplinter Review
Attachment #288287 - Flags: review?(smontagu)
Making a P2 blocker because dup 403192 was.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Whiteboard: [needs review]
Attachment #288287 - Flags: review?(smontagu) → review+
checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: