Bug 403455. Allow prewrap text to record 'last break opportunity'. r=smontagu